# security-of-computer-systems

./: .gitignore  README.md  pyproject.toml
projekt/: __init__.py
projekt/app/: app.py
projekt/app/connection/: server_controller.py  server_manager.py
projekt/app/connections/: __init__.py  server_manager.py  user_manager.py  users_controller.py
projekt/app/gui/: __init__.py  gui_actions.py  main_window.py
projekt/app/gui/screens/: __init__.py  chat_screen.py  connect_screen.py  wait_screen.py
projekt/app/gui/threads/: __init__.py  background_task.py  worker.py
projekt/app/gui/widgets/: __init__.py  active_users_widget.py  chat_widget.py  message_widget.py  talk_widget.py  user_widget.py
projekt/functional/communication/: __init__.py  serializer.py
projekt/functional/communication/message_codes/: __init__.py  client_actions.py  server_actions.py  user_actions.py
projekt/functional/communication/sockets/: __init__.py  aes_socket.py  file_socket.py  rsa_socket.py
projekt/functional/encryption/: __init__.py  aes_translator.py  keys.py
projekt/functions/communication/: __init__.py
projekt/functions/encryption/: __init__.py  keys.py  rsa_translator.py
projekt/server/: server.py
projekt/server/connection/: client_manager.py  server_controller.py
projekt/server/connections/: __init__.py  client_manager.py  server_controller.py
tests/: data.json  file_socket_test.py
